testdata/typechecker/error/arrays/AssignToInt.java
int main() {
        int[] i;
        i = new int[5];
        int j;
        j = i;
    	return 0;
}